[tool.poetry]
name = "book-recorder"
version = "0.1.0"
description = ""
authors = ["Ryota Jin <70737858+RyotaJin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
xmltodict = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
